--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         "eslint-plugin-simple-import-sort": "^12.1.1",
         "eslint-plugin-unicorn": "^62.0.0",
         "jsdom": "^27.4.0",
-        "prettier": "^3.8.0",
+        "prettier": "3.8.1",
         "typescript": "^5.3.0",
         "typescript-eslint": "^8.53.0",
         "vite-tsconfig-paths": "^6.0.4",
