--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,13 +2,13 @@
   "semi": true,
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 100,
+  "printWidth": 120,
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": true,
   "arrowParens": "always",
   "endOfLine": "lf",
-  "bracketSameLine": false,
-  "proseWrap": "always",
+  "bracketSameLine": true,
+  "proseWrap": "never",
   "embeddedLanguageFormatting": "auto"
 }
