--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "test": "npm run test:run --workspaces",
-    "test:core": "npm run test -w packages/core",
     "test:math": "npm run test -w packages/math",
+    "test:render": "npm run test -w packages/render",
     "test:scene": "npm run test -w packages/scene"
   },
   "devDependencies": {
