--- a/examples/displayingabitmap/package.json
+++ b/examples/displayingabitmap/package.json
@@ -14,6 +14,6 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "assets": "node ../../scripts/download-assets.mjs"
+    "assets": "tsx ../../scripts/download-assets.ts"
   }
 }
