scene: Refactor to use contracts for Renderable

--- a/packages/scene/tsconfig.json
+++ b/packages/scene/tsconfig.json
@@ -8,6 +8,6 @@
     "declarationMap": true,
     "sourceMap": true
   },
-  "references": [{ "path": "../math" }],
+  "references": [{ "path": "../contracts" }, { "path": "../math" }, { "path": "../types" }],
   "include": ["src"]
 }
